--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mu-editor (1.1.0~a2-5) unstable; urgency=medium
+
+  * Add zoom-button-bar PR
+
+ -- Keith Packard <keithp@keithp.com>  Wed, 20 Nov 2019 22:29:16 -0800
+
 mu-editor (1.1.0~a2-4) unstable; urgency=medium
 
   * Add USB id for Arduino Mega 2560
