--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mu-editor (1.1.0~a2-6) unstable; urgency=medium
+
+  * Make sure put 'snek' script ends with newline
+
+ -- Keith Packard <keithp@keithp.com>  Sun, 01 Dec 2019 15:22:36 -0800
+
 mu-editor (1.1.0~a2-5) unstable; urgency=medium
 
   * Add zoom-button-bar PR
