debian: release current bits as 1.1.0~a2-7
Upstream hasn't changed the version from 1.1.0~a2, so we'll
just tack on -7

Signed-off-by: Keith Packard <keithp@keithp.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mu-editor (1.1.0~a2-7) unstable; urgency=medium
+
+  * Merge upstream
+
+ -- Keith Packard <keithp@keithp.org>  Mon, 27 Jan 2020 10:33:28 -0800
+
 mu-editor (1.1.0~a2-6) unstable; urgency=medium
 
   * Make sure put 'snek' script ends with newline
